glFusion ChangeLog

v1.2.0
------


v1.1.3
------
- 0000415: css.php and js.php consume too much CPU (mark)
- 0000408: "Edit a Comment' is hard coded in the source (mark)
- 0000411: Sending trackbacks to WordPress sites fail (mark)
- 0000410: Uploading large plugins could error with max_execution_time exceeded
           (mark)
- 0000409: Template Caching is very slow when using network shares (mark)
- 0000407: The template library does not properly handle double dashes (--) in
           the item id when creating the instance cache HTML comment (mark)
- 0000263: Hide "Comments (0)" indication when there are 0 comments (Eric)
- 0000342: Default text size for textarea (Eric)
- 0000380: Menu graphic <li> background does not display in IE6 (Eric)
- 0000402: "No boxes" should read "No Blocks" in Account Settings (Eric)
- 0000387: Clean up loginform.thtml (Eric)
- 0000385: copy icon broken in site tailor (Eric)
- 0000400: Default topic was not selected on new stories (mark)
- 0000397: Incorrect paths are used throughout the system.
           $_CONF['path'].'system/' instead of $_CONF['path_system'] (mark)
- 0000396: htmlLawed has been upgraded to v1.1.7.2 (mark)
- 0000395: Removing a plugins files causes glFusion to crash (mark)
- 0000390: Postcards do not display properly in mail client (mark)
- 0000386: CUSTOM_templateSetVars() does not work for story templates (mark)
- 0000384: icon for additional profile api broken (mark)
- Added default mooDrawer and mooMorph example widgets (Eric)

Calendar Plugin
---------------
- 0000391: Cannot edit minutes field in Event Start Date after 1.1.2
           upgrade (mark)

CAPTCHA Plugin
--------------
- 0000412: If using the 'general' option to enable CAPTCHA in a static page,
           there is no template variable to pass (mark)

FileMgmt Plugin
---------------
- 0000413: If uploads are not moderated, the extension mapping rename is not
           performed. (mark)

Forum Plugin
------------