@@ -1933,7 +1933,7 @@ function cache_clean_directories($path, $needle = '', $since = 0)
 {
     if ($dir = @opendir($path)) {
         while (false !== ($entry = readdir($dir))) {
-            if ($entry == '.' || $entry == '..' || is_link($entry)) {
+            if ($entry == '.' || $entry == '..' || $entry == '.svn' || is_link($entry)) {
             } elseif (is_dir($path . '/' . $entry)) {
                 cache_clean_directories($path . '/' . $entry, $needle);
                 @rmdir($path . '/' . $entry);
